; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_acl_erp.c_mlxsw_sp_acl_erps_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_acl_erp.c_mlxsw_sp_acl_erps_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sp = type { i32 }
%struct.mlxsw_sp_acl_atcam = type { %struct.mlxsw_sp_acl_erp_core* }
%struct.mlxsw_sp_acl_erp_core = type { %struct.mlxsw_sp* }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlxsw_sp_acl_erps_init(%struct.mlxsw_sp* %0, %struct.mlxsw_sp_acl_atcam* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mlxsw_sp*, align 8
  %5 = alloca %struct.mlxsw_sp_acl_atcam*, align 8
  %6 = alloca %struct.mlxsw_sp_acl_erp_core*, align 8
  %7 = alloca i32, align 4
  store %struct.mlxsw_sp* %0, %struct.mlxsw_sp** %4, align 8
  store %struct.mlxsw_sp_acl_atcam* %1, %struct.mlxsw_sp_acl_atcam** %5, align 8
  %8 = load i32, i32* @GFP_KERNEL, align 4
  %9 = call %struct.mlxsw_sp_acl_erp_core* @kzalloc(i32 8, i32 %8)
  store %struct.mlxsw_sp_acl_erp_core* %9, %struct.mlxsw_sp_acl_erp_core** %6, align 8
  %10 = load %struct.mlxsw_sp_acl_erp_core*, %struct.mlxsw_sp_acl_erp_core** %6, align 8
  %11 = icmp ne %struct.mlxsw_sp_acl_erp_core* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @ENOMEM, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %3, align 4
  br label %33

15:                                               ; preds = %2
  %16 = load %struct.mlxsw_sp*, %struct.mlxsw_sp** %4, align 8
  %17 = load %struct.mlxsw_sp_acl_erp_core*, %struct.mlxsw_sp_acl_erp_core** %6, align 8
  %18 = getelementptr inbounds %struct.mlxsw_sp_acl_erp_core, %struct.mlxsw_sp_acl_erp_core* %17, i32 0, i32 0
  store %struct.mlxsw_sp* %16, %struct.mlxsw_sp** %18, align 8
  %19 = load %struct.mlxsw_sp_acl_erp_core*, %struct.mlxsw_sp_acl_erp_core** %6, align 8
  %20 = load %struct.mlxsw_sp_acl_atcam*, %struct.mlxsw_sp_acl_atcam** %5, align 8
  %21 = getelementptr inbounds %struct.mlxsw_sp_acl_atcam, %struct.mlxsw_sp_acl_atcam* %20, i32 0, i32 0
  store %struct.mlxsw_sp_acl_erp_core* %19, %struct.mlxsw_sp_acl_erp_core** %21, align 8
  %22 = load %struct.mlxsw_sp*, %struct.mlxsw_sp** %4, align 8
  %23 = load %struct.mlxsw_sp_acl_erp_core*, %struct.mlxsw_sp_acl_erp_core** %6, align 8
  %24 = call i32 @mlxsw_sp_acl_erp_tables_init(%struct.mlxsw_sp* %22, %struct.mlxsw_sp_acl_erp_core* %23)
  store i32 %24, i32* %7, align 4
  %25 = load i32, i32* %7, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %15
  br label %29

28:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %33

29:                                               ; preds = %27
  %30 = load %struct.mlxsw_sp_acl_erp_core*, %struct.mlxsw_sp_acl_erp_core** %6, align 8
  %31 = call i32 @kfree(%struct.mlxsw_sp_acl_erp_core* %30)
  %32 = load i32, i32* %7, align 4
  store i32 %32, i32* %3, align 4
  br label %33

33:                                               ; preds = %29, %28, %12
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local %struct.mlxsw_sp_acl_erp_core* @kzalloc(i32, i32) #1

declare dso_local i32 @mlxsw_sp_acl_erp_tables_init(%struct.mlxsw_sp*, %struct.mlxsw_sp_acl_erp_core*) #1

declare dso_local i32 @kfree(%struct.mlxsw_sp_acl_erp_core*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
